...
        app:tabIndicatorHeight="2dp"
        app:tabMode="fixed"
        app:tabRippleColor="@null"
        style="@style/tablayout"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/viewpager"
        app:layout_constraintTop_toBottomOf="@id/tabs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageButton
        android:id="@+id/starButton"
        android:layout_width="51dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:background="@color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/tvCompany"
        app:layout_constraintEnd_toEndOf="parent"
...
